update header color

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 </head>
 
 <body>
-    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom header">
+   <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom header bg-success">
         <ul class="nav nav-pills">
-            <li class="nav-item"><a href="#" class="nav-link active bg-success" aria-current="page">Home</a></li>
-            <li class="nav-item"><a href="#main" class="nav-link">Informações</a></li>
-            <li class="nav-item"><a href="#section-blog" class="nav-link px-2 text-body-secondary">Blog</a></li>
-            <li class="nav-item"><a href="#article-faqs" class="nav-link">FAQs</a></li>
+            <li class="nav-item"><a href="#" class="nav-link active bg-light text-dark " aria-current="page">Home</a></li>
+            <li class="nav-item"><a href="#main" class="nav-link text-light">Informações</a></li>
+            <li class="nav-item"><a href="#section-blog" class="nav-link px-2 text-light">Blog</a></li>
+            <li class="nav-item"><a href="#article-faqs" class="nav-link text-light">FAQs</a></li>
 
         </ul>
     </header>
