Criação do server e json

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
             <li class="nav-item"><a href="#article-faqs" class="nav-link text-light">FAQs</a></li>
 
         </ul>
+
+        <form id="buscar-planta-form" action="/buscar-planta" method="GET">
+            <label for="planta" class="text-light">Buscar planta</label>
+            <input type="text" id="planta" name="nome" placeholder="">
+            <button type="submit" class="btn btn-primary ">Buscar</button>
+        </form>
     </header>
     <nav>
 
