--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-   <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom header bg-success">
+   <header class="d-flex flex-wrap justify-content-center py-3 mb-4 header bg-success">
         <ul class="nav nav-pills">
             <li class="nav-item"><a href="#" class="nav-link active bg-light text-dark " aria-current="page">Home</a></li>
             <li class="nav-item"><a href="#main" class="nav-link text-light">Informações</a></li>
