inputs forms style for larger screens

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
 </head>
 
 <body>
-   <header class="d-flex flex-wrap justify-content-center py-3 mb-4 header bg-success">
-        <ul class="nav nav-pills">
-            <li class="nav-item"><a href="#" class="nav-link active bg-light text-dark " aria-current="page">Home</a></li>
-            <li class="nav-item"><a href="#main" class="nav-link text-light">Informações</a></li>
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 header bg-success">
+        <ul class="nav nav-pills me-3">
+            <li class="nav-item"><a href="#" class="nav-link active bg-light text-dark me-2" aria-current="page">Home</a></li>
+            <li class="nav-item"><a href="#main" class="nav-link text-light ">Informações</a></li>
             <li class="nav-item"><a href="#section-blog" class="nav-link px-2 text-light">Blog</a></li>
             <li class="nav-item"><a href="#article-faqs" class="nav-link text-light">FAQs</a></li>
-
         </ul>
-
-        <form id="buscar-planta-form" action="/buscar-planta" method="GET">
-            <label for="planta" class="text-light">Buscar planta</label>
-            <input type="text" id="planta" name="nome" placeholder="">
-            <button type="submit" class="btn btn-primary ">Buscar</button>
+    
+        <form id="buscar-planta-form" action="/buscar-planta" method="GET" class="d-flex align-items-center">
+            <div class="input-group">
+                <input type="text" id="planta" name="nome" class="form-control" placeholder="Buscar planta ">
+                <button type="submit" class="btn btn-light ms-2">Buscar</button>
+            </div>
         </form>
     </header>
     <nav>
