--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
     <!--stylesheet------------->
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!--logo------------->
+    <link rel="icon" href="./assets/images/logo/logo.png">
+    
     <title>EcoLeaf</title>
 </head>
 
@@ -25,7 +28,7 @@
     
         <form id="buscar-planta-form" action="/buscar-planta" method="GET" class="d-flex align-items-center">
             <div class="input-group">
-                <input type="text" id="planta" name="nome" class="form-control" placeholder="Buscar planta ">
+                <input type="text" id="planta" name="nome" class="form-control" placeholder="Buscar planta 🔎">
                 <button type="submit" class="btn btn-light ms-2">Buscar</button>
             </div>
         </form>
