--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--stylesheet------------->
     <link rel="stylesheet" href="./assets/css/style.css">
     <!--logo------------->
-    <link rel="icon" href="./assets/images/logo/logo.png">
+    <link rel="icon" href="./assets/images/logo/logoEcoLeaf.png" sizes="32x32" type="image/png">
     
     <title>EcoLeaf</title>
 </head>
