--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
 <body>
     <header class="d-flex flex-wrap justify-content-between py-3 header bg-success">
-        <img class="px-4 img-logo-white-text" src="/images/svg/logoTextoBranco.png" alt="">
+        <img class="px-4 img-logo-white-text" src="/images/svg/TextoBranco.svg" alt="">
         <nav class="d-flex">
-            <ul class="nav nav-pills d-flex align-items-center justify-content-center">
+            <ul class="nav nav-pills d-flex align-items-center justify-content-center ms-5">
                 <li class="nav-item"><a href="#" class="nav-link active bg-light text-dark me-2"
                         aria-current="page">Home</a></li>
                 <li class="nav-item"><a href="#main" class="nav-link text-light ">Informações</a></li>
