mobile header style - script/css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--stylesheet------------->
     <link rel="stylesheet" href="/css/style.css">
 
-    <!--logo------------->
+    <!--file logo------------->
     <link rel="icon" href="/images/svg/logoFolha.png" sizes="32x32" type="image/png">
 
     <title>EcoLeaf</title>
@@ -30,6 +30,10 @@
                 <li class="nav-item"><a href="#section-blog" class="nav-link text-light">Blog</a></li>
             </ul>
         </nav>
+        <div class="menu">
+            <img src="/images/svg/cardapio.png" width="35px" height="35px" class="menu-burger" alt="">
+            <img src="/images/svg/x.png" alt="" width="27px" height="27px" class="close-menu">
+        </div>
         <form id="buscar-planta-form" action="/buscar-planta" method="GET" class="d-flex pe-4">
             <div class="input-group">
 
@@ -155,10 +159,10 @@
             </div>
         </section>
         <article id="article-faqs" class="mt-5">
-            <p class="text-center text-large">Duvidas Frequentes</p>
+            <p class="text-center text-large">FAQ's</p>
 
             <div class="d-flex justify-content-center">
-                <span class="linha"></span>
+                <span class="linha-faqs"></span>
             </div>
 
             <div class="accordion" id="accordionExample">
