--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <section class="container d-flex flex-column justify-content-center align-items-center table-section">
             <p class="text-large text-center h-table">Plantas com mais Pesquisas:</p>
             <div class="table-responsive" style="margin-top: 20px;">
-                <table class="table">
+                <table class="table" style="cursor: pointer;">
                     <thead class="">
                         <tr class="table">
                             <th>#</th>
@@ -271,7 +271,7 @@
                     </div>
                 </div>
             </article>
-            <section id="section-blog">
+            <section id="section-blog" style="margin-bottom: 8vh;">
                 <div class="d-flex justify-content-center flex-column">
                     <p class="text-center p-over text-success">Posts Mais Recentes</p>
                     <p class="text-center text-blog">Blog</p>
@@ -332,12 +332,17 @@
                 </div>
 
             </section>
-            <footer class="py-3 my-4 mt-5">
+            <footer class="py-3 my-4">
                 <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-                    <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-                    <li class="nav-item"><a href="#main" class="nav-link px-2 text-body-secondary">Informações</a></li>
-                    <li class="nav-item"><a href="#article-faqs" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-                    <li class="nav-item"><a href="#section-blog" class="nav-link px-2 text-body-secondary">Blog</a></li>
+                    <a href="https://github.com/Guilherme-Rigobello/EcoLeaf">
+                        <img class="img-footer px-2" src="/images/svg/github.png" alt="">
+                    </a>
+                    <a href="#">
+                        <img class="img-footer px-2" src="/images/svg/instagram.png" alt="">
+                    </a>
+                    <a href="#">
+                        <img class="img-footer px-2" src="/images/svg/twitter.png" alt="">
+                    </a>
                 </ul>
                 <p class="text-center text-body-secondary">© 2024 EcoLeaf, Inc</p>
             </footer>
@@ -346,7 +351,6 @@
 
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="/js/script.js"></script>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
