--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
 </head>
 
 <body>
+    <!--header------------->
     <header class="d-flex flex-wrap justify-content-between py-3 header bg-success">
+    <!--header logo------------->
         <img class="px-4 img-logo-white-text" src="/images/svg/TextoBranco.svg" alt="">
+    <!--navigation------------->
         <nav class="d-flex">
             <ul class="nav nav-pills d-flex align-items-center justify-content-center ms-5">
                 <li class="nav-item"><a href="#" class="nav-link active bg-light text-dark me-2"
@@ -30,10 +33,12 @@
                 <li class="nav-item"><a href="#section-blog" class="nav-link text-light">Blog</a></li>
             </ul>
         </nav>
+    <!--menu mobile------------->
         <div class="menu">
-            <img src="/images/svg/cardapio.png" width="35px" height="35px" class="menu-burger" alt="">
+            <img src="/images/svg/burguer.png" width="35px" height="35px" class="menu-burger" alt="">
             <img src="/images/svg/x.png" alt="" width="27px" height="27px" class="close-menu">
         </div>
+    <!--search form------------->
         <form id="buscar-planta-form" action="/buscarPorNome" method="GET" class="d-flex pe-4">
             <div class="input-group">
 
@@ -44,7 +49,9 @@
             </div>
         </form>
     </header>
+    <!--main------------->
     <main id="main">
+    <!--home table------------->
         <section class="container d-flex flex-column justify-content-center align-items-center table-section">
             <p class="text-large text-center h-table">Plantas com mais Pesquisas:</p>
             <div class="table-responsive" style="margin-top: 20px;">
@@ -62,14 +69,14 @@
                     </tbody>
                 </table>
         </section>
-
+    <!--info section------------->
         <section class="container-fluid mt-5 section-info">
             <p class="text-large text-center" id="a-1">Características Gerais</p>
 
             <div class="d-flex justify-content-center">
                 <span class="linha"></span>
             </div>
-
+    <!--plants info------------->
             <div class="row">
                 <div class="col-md-3 position-relative">
                     <div class="image-container">
@@ -176,6 +183,7 @@
                 </div>
             </div>
         </section>
+        <!--FAQ's section------------->
         <article id="article-faqs" class="mt-5">
             <p class="text-center text-large">FAQ's</p>
 
@@ -271,6 +279,7 @@
                 </div>
             </div>
         </article>
+    <!--blog section------------->
         <section id="section-blog" style="margin-bottom: 8vh;">
             <div class="d-flex justify-content-center flex-column">
                 <p class="text-center p-over text-success">Posts Mais Recentes</p>
@@ -330,18 +339,18 @@
                     </div>
                 </div>
             </div>
-
+    <!--footer------------->
         </section>
         <footer class="py-3 my-4">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                 <a href="https://github.com/Guilherme-Rigobello/EcoLeaf">
-                    <img class="img-footer px-2" src="/images/svg/github.png" alt="">
+                    <img class="img-footer px-2" src="/images/svg/social/github.png" alt="">
                 </a>
                 <a href="#">
-                    <img class="img-footer px-2" src="/images/svg/instagram.png" alt="">
+                    <img class="img-footer px-2" src="/images/svg/social/instagram.png" alt="">
                 </a>
                 <a href="#">
-                    <img class="img-footer px-2" src="/images/svg/twitter.png" alt="">
+                    <img class="img-footer px-2" src="/images/svg/social/twitter.png" alt="">
                 </a>
             </ul>
             <p class="text-center text-body-secondary">© 2024 EcoLeaf, Inc</p>
