--- a/index.html
+++ b/index.html
@@ -62,13 +62,17 @@
                             <th>Científico</th>
                             <th>Popular</th>
                             <th>Foto</th>
+                            <th>Ações</th>
                         </tr>
                     </thead>
                     <tbody>
                         {{plantasTable}}
                     </tbody>
-                </table>
-        </section>
+                </table>    
+                <div class="text-center mt-3">
+                    <a href="http://localhost:4000/adicionar-planta" class="btn btn-success">Adicionar Planta</a>
+                </div>
+        </section>  
         <!--info section------------->
         <section class="container-fluid mt-5 section-info">
             <p class="text-large text-center" id="a-1">Características Gerais</p>
