Fixed "Nome Popular" in the add form

--- a/assets/html/adicionarPlanta.html
+++ b/assets/html/adicionarPlanta.html
@@ -39,7 +39,7 @@
             </div>
         </form>
     </header>
-    <div class="container mt-5 pt-5">
+    <div class="container d-flex flex-column justify-content-between mt-5 pt-5">
         <h1 class="mb-4 text-center">Adicionar Planta</h1>
 
         <form action="/adicionar-planta" method="POST">
@@ -55,7 +55,7 @@
 
             <div class="mb-3">
                 <label for="nomePopular" class="form-label">Nome Popular:</label>
-                <input id="descricao" name="descricao" class="form-control" required></input>
+                <input id="nomePopular" name="nomePopular" class="form-control" required></input>
             </div>
 
             <div class="mb-3">
