--- a/assets/html/adicionarPlanta.html
+++ b/assets/html/adicionarPlanta.html
@@ -13,6 +13,30 @@
 
     <!--link bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <style>
+        .form-control:focus {
+            box-shadow: 0 0 0 0.2rem rgba(82, 82, 82, 0.25);
+            outline: none;
+        }
+
+        .form-control {
+            border-radius: 0.25rem;
+            border-color: #ced4da;
+        }
+
+        @media (max-width:920px) {
+            .all {
+                margin: 0 20px;
+            }
+        }
+
+        @media (max-width:600px) {
+            .btn {
+                width: 150px;
+            }
+        }
+    </style>
 </head>
 
 <body>
@@ -39,36 +63,40 @@
             </div>
         </form>
     </header>
-    <div class="container d-flex flex-column justify-content-between mt-5 pt-5">
-        <h1 class="mb-4 text-center">Adicionar Planta</h1>
 
-        <form action="/adicionar-planta" method="POST">
-            <div class="mb-3">
-                <label for="id" class="form-label">ID</label>
-                <input type="number" id="id" name="id" class="form-control" required>
-            </div>
+    <div class="d-flex justify-content-center flex-column align-items-center" style="min-height: 90vh;">
+        <div class=" container d-flex flex-column mt-5 pt-5" style="max-width: 900px;">
+            <h1 class="mb-4 text-center">Adicionar Planta</h1>
 
-            <div class="mb-3">
-                <label for="nomeCientifico" class="form-label">Nome Científico:</label>
-                <input type="text" id="nomeCientifico" name="nomeCientifico" class="form-control" rows="3" required></input>
-            </div>
+            <form action="/adicionar-planta" method="POST">
+                <div class="all">
+                    <div class="mb-3">
+                        <label for="id" class="form-label">ID:</label>
+                        <input type="number" id="id" name="id" class="form-control" required>
+                    </div>
 
-            <div class="mb-3">
-                <label for="nomePopular" class="form-label">Nome Popular:</label>
-                <input id="nomePopular" name="nomePopular" class="form-control" required></input>
-            </div>
+                    <div class="mb-3">
+                        <label for="nomeCientifico" class="form-label">Nome Científico:</label>
+                        <input type="text" id="nomeCientifico" name="nomeCientifico" class="form-control" required>
+                    </div>
 
-            <div class="mb-3">
-                <label for="foto" class="form-label">Url da Foto</label>
-                <input type="text" id="foto" name="foto" class="form-control" required>
-            </div>
+                    <div class="mb-3">
+                        <label for="nomePopular" class="form-label">Nome Popular:</label>
+                        <input id="nomePopular" name="nomePopular" class="form-control" required>
+                    </div>
 
-            <button type="submit" class="btn btn-success">Adicionar Planta</button>
-        </form>
+                    <div class="mb-3">
+                        <label for="foto" class="form-label">Url da Foto:</label>
+                        <input type="text" id="foto" name="foto" class="form-control" required>
+                    </div>
 
-        <div class="text-center mt-4">
-            <a href="/" class="btn btn-secondary">Voltar para a lista</a>
+                    <div class="button-group mt-4 d-flex justify-content-center">
+                        <button type="submit" class="btn btn-success me-3" style="width: 150px;">Adicionar</button>
+                        <a href="/" class="btn btn-secondary" style="width: 150px;">Voltar</a>
+                    </div>
+            </form>
         </div>
+    </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
