new json ID, fix update data, new button style (search input)

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </tbody>
                 </table>    
                 <div class="text-center mt-3">
-                    <a href="http://localhost:4000/adicionar-planta" class="btn btn-secondary">Adicionar Planta</a>
+                    <a href="http://localhost:4000/adicionar-planta" class="btn btn-secondary add">Adicionar Planta</a>
                 </div>
         </section>  
         <!--info section------------->
